# eta-dynamic-routing-ml-service

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/sample/: synthetic_eta_data.csv
infra/docker/: Dockerfile
infra/github/workflows/: ci.yml
src/eta_routing/: __init__.py
src/eta_routing/data/: __init__.py  dataset_loader.py
src/eta_routing/features/: __init__.py  feature_engineering.py
src/eta_routing/serving/: __init__.py  app.py
tests/: test_api.py  test_data_valid.py  test_features.py  test_models.py
