[tool.poetry]
name = "eta-routing"
version = "0.1.0"
description = "ETA prediction and dynamic routing service"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.24.4"
scikit-learn = "^1.3.2"
xgboost = "^1.7.6"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = "^2.6.1"
joblib = "^1.3.2"
pyarrow = "^13.0.0"
great-expectations = "^0.17.12"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "23.7.0"
flake8 = "6.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"